kikker/deploys/istio/kikker-gateway-vn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kikker-gateway-vncluster
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikkergatewayvncluster
spec:
  hosts:
  - "*"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kikkerfrontend
        port:
          number: 80  
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikkergatewayvncluster2
spec:
  hosts:
  - "*"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        exact: /values
    - uri:
        prefix: /api
    route:
    - destination:
        host: mariadbsample
        port:
          number: 80
